nit: sort gas_consumed field above gas_limit
