# hedera-mirror-rest/model/contractResult.js
@@ -40,9 +40,9 @@ class ContractResult {
   static FAILED_INITCODE = 'failed_initcode';
   static FUNCTION_PARAMETERS = 'function_parameters';
   static FUNCTION_RESULT = 'function_result';
+  static GAS_CONSUMED = 'gas_consumed';
   static GAS_LIMIT = 'gas_limit';
   static GAS_USED = 'gas_used';
-  static GAS_CONSUMED = 'gas_consumed';
   static PAYER_ACCOUNT_ID = 'payer_account_id';
   static SENDER_ID = 'sender_id';
   static TRANSACTION_HASH = 'transaction_hash';
