# hedera-mirror-rest/service/contractService.js
@@ -61,9 +61,9 @@ ${ContractResult.getFullName(ContractResult.CREATED_CONTRACT_IDS)},
 ${ContractResult.getFullName(ContractResult.ERROR_MESSAGE)},
 ${ContractResult.getFullName(ContractResult.FAILED_INITCODE)},
 ${ContractResult.getFullName(ContractResult.FUNCTION_PARAMETERS)},
+${ContractResult.getFullName(ContractResult.GAS_CONSUMED)},
 ${ContractResult.getFullName(ContractResult.GAS_LIMIT)},
 ${ContractResult.getFullName(ContractResult.GAS_USED)},
-${ContractResult.getFullName(ContractResult.GAS_CONSUMED)},
 ${ContractResult.getFullName(ContractResult.PAYER_ACCOUNT_ID)},
 ${ContractResult.getFullName(ContractResult.SENDER_ID)},
 ${ContractResult.getFullName(ContractResult.TRANSACTION_HASH)},
