# hedera-mirror-rest/viewmodel/contractResultViewModel.js
@@ -40,9 +40,9 @@ class ContractResultViewModel {
     this.error_message = _.isEmpty(contractResult.errorMessage) ? null : contractResult.errorMessage;
     this.from = EntityId.parse(contractResult.senderId).toEvmAddress();
     this.function_parameters = toHexString(contractResult.functionParameters, true);
+    this.gas_consumed = contractResult.gasConsumed;
     this.gas_limit = contractResult.gasLimit;
     this.gas_used = contractResult.gasUsed;
-    this.gas_consumed = contractResult.gasConsumed;
     this.timestamp = nsToSecNs(contractResult.consensusTimestamp);
     this.to = contractId.toEvmAddress();
     this.hash = toHexString(contractResult.transactionHash, true);
